# auto-rotate

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  flatpak.yml  release.yml  screenshot.yml
packaging/: README.md  macos-signing.md  make_icons.py  make_logo_svg.py
packaging/flatpak/: dev.gedejong.autorotate.yaml  io.github.gedejong.auto_rotate.desktop  io.github.gedejong.auto_rotate.metainfo.xml  io.github.gedejong.auto_rotate.yaml  make_sample_scan.py  python3-deps.json  requirements.txt
packaging/homebrew/: auto-rotate.rb
packaging/winget/: dev.gedejong.AutoRotate.installer.yaml
src/auto_rotate/: __init__.py  __main__.py  binaries.py  clean.py  cli.py  deskew.py  errors.py  ocr.py  orientation.py  pipeline.py  raster.py
src/auto_rotate/gui/: __init__.py  app.py  controller.py
src/auto_rotate/gui/resources/: autorotate.icns
tests/: conftest.py  test_binaries.py  test_clean.py  test_cli.py  test_deskew.py  test_gui_controller.py  test_ocr.py  test_orientation.py  test_pipeline.py  test_raster.py
